# skruv

./: .gitignore  CMakeLists.txt  README.md  build.bat  build2.bat  debug.bat  laleh.txt  project.4coder  skruv.exe.stackdump
src/: main.cpp
src/core/: Application.h  Base.h  Skruv.h  State.cpp  State.h  WindowModule.cpp  WindowModule.h
src/core/render/: Image.cpp  Image.h  Material.cpp  Material.h  Model.cpp  Model.h  RenderModule.cpp  RenderModule.h  Shader.cpp  Shader.h  ShaderLibrary.h  ShaderProperties.h  Vertex.h
src/core/scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneModule.cpp  SceneModule.h
src/game/: Game.h
src/materials/: Test.material
src/shaders/: Basic.shader
